fixed the screen that's not showing error, the web folder can now show in any screnne size

--- a/templates/web/html/css/login.css
+++ b/templates/web/html/css/login.css
@@ -89,8 +89,16 @@
         top: 20px;
     }
 
-    .forget{
+    .remember-me{
         margin: -15px 0 15px;
+        font-size: .9em;
+        color: #fff;
+        display: flex;
+        justify-content: left;
+
+    }
+    .forget a{
+        margin: -1px 0 15px;
         font-size: .9em;
         color: #fff;
         display: flex;
@@ -145,7 +153,7 @@
 
 
 
-    @media only screen and (min-width:480px){
+    @media only screen and (max-width: 600px) and (min-width: 400px){
         section{
             display: flex;
             justify-content: center;
