--- a/templates/web/html/css/sign_up.css
+++ b/templates/web/html/css/sign_up.css
@@ -147,14 +147,14 @@ button{
 
 
 
-@media only screen and (min-width:480px){
+@media only screen and (max-width: 600px) and (min-width: 400px){
     section{
         display: flex;
         justify-content: center;
         align-items: center;
         min-height: 100vh;
         width: 100%;
-        background: url(../images/login_background.jpg)no-repeat;
+        background: url(../images/milad-unsplash.jpg)no-repeat;
         background-position: center;
         background-size: cover;
     }
