--- a/templates/web/html/css/style.css
+++ b/templates/web/html/css/style.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Geologica:wght@200&display=swap');
+ /* @import url('https://fonts.googleapis.com/css2?family=Geologica:wght@200&display=swap'); */
 
 *{
 margin: 0;
@@ -119,7 +119,7 @@ header{
 
 /*Responsiveness*/
 
-@media (max-width: 992px)  {
+@media only screen and (max-width: 600px) and (min-width: 400px) {
     .navbar .links,
     .navbar .action_btn{
         display: none;
@@ -134,4 +134,4 @@ header{
 
     }
 }
- 
+
